--- a/YesDay/YesDay.csproj
+++ b/YesDay/YesDay.csproj
@@ -12,4 +12,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.1.4" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="wwwroot\Images\" />
+  </ItemGroup>
+
 </Project>
