--- a/YesDay/YesDay.csproj
+++ b/YesDay/YesDay.csproj
@@ -16,4 +16,10 @@
     <Folder Include="wwwroot\Images\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Content Update="Views\Couple\UpdateExpense.cshtml">
+      <Pack>$(IncludeRazorContentInPack)</Pack>
+    </Content>
+  </ItemGroup>
+
 </Project>
